--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -12,7 +12,7 @@ body {
     display: block;
     width: 100%;
     text-align: center;
-    background: url('http://placehold.it/1900x500') no-repeat center center scroll;
+    background: url('../images/header.png') no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -30,9 +30,9 @@ body {
 }
 
 .headline h2 {
-    font-size: 77px;
+    font-size: 78px;
     background: #fff;
-    background: rgba(255,255,255,0.9);
+    background: rgba(255,255,255,0.6);
 }
 
 .featurette-divider {
